--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,23 +1,31 @@
 {% extends "MainApp/base.html" %}
 
+{% block page_header %}
+
+<h1>Topics</h1>
+
+{% endblock page_header %}
+
+
 {% block content %}
 
-    <p>Topics</p>
+<p>Topics</p>
 
-    <ul>
-        {% for topic in topics %}
+<ul>
+    {% for topic in topics %}
 
-        <li>{{ topic }}</li>
-        {% empty %}
-        <li>No topics have been added yet.</li>
-        {% endfor %} 
+    <li>
+        <a href="{% url 'MainApp:topic' topic.id %}">{{ topic }}</a>
+    </li>
 
+    {% empty %}
 
-    </ul>
+    <li>No topics have been added yet.</li>
+
+    {% endfor %}
+
 </ul>
-<p>
-    <a href ="{% url 'MainApp:topic' topic.id %}">{{ topic }}</a>
-</p>
+
+<a href ="{% url 'MainApp:new_topic' %}">Add a new topic</a>
+
 {% endblock content %}
-
-
