--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -9,7 +9,9 @@
         <li>
             <p>{{ entry.date_added|date: 'M d, Y H:i' }}</p>
             <p>{{ entry.text|linebreaks }}</p>
-
+            <p>
+                <a href="{% url 'MainApp:edit_entry' entry.id %}">Edit entry</a>
+            </p>
         </li>
 
         {% empty %}
@@ -18,7 +20,9 @@
 
 
     </ul>
-
+    <p>
+        <a href ="{% url 'MainApp:new_entry' topic.id %}">Add a new entry</a>
+    </p>
 {% endblock content %}
 
 
